[tool.poetry]
name = "repl_python3_SELFBOT"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
bs4 = "^0.0.1"
colorama = "^0.4.4"
discord = "^1.7.3"
gTTS = "^2.2.3"
Flask = "^2.2.2"
httpx = "^0.23.1"
nekobot = "^1.2"
praw = "^7.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
